# logos-cpp-sdk

./: .gitignore  README.md  flake.nix
.github/workflows/: ci.yml  doctests.yml
cpp/: CMakeLists.txt  compile.sh  deferred_delete_guard.h  logos-cpp-sdkConfig.cmake.in  logos_api.cpp  logos_api.h  logos_api_client.cpp  logos_api_client.h  logos_api_consumer.cpp  logos_api_consumer.h  logos_api_provider.cpp  logos_api_provider.h  logos_instance.h  logos_json.h  logos_json_convert.cpp  logos_json_convert.h  logos_lp_client.h  logos_mode.h  logos_module_context.h  logos_object.h  logos_provider_object.cpp  logos_provider_object.h  logos_registry.h  logos_registry_factory.cpp  logos_registry_factory.h  logos_result.h  logos_thread_marshal.h  logos_token_manager_context.h  logos_transport.cpp  logos_transport.h  logos_transport_config.h  logos_transport_config_json.cpp  logos_transport_config_json.h  logos_transport_factory.cpp  logos_transport_factory.h  logos_types.cpp  logos_types.h  module_proxy.cpp  module_proxy.h  qt_provider_object.cpp  (+2 more)
cpp-generator/: CMakeLists.txt  compile.sh  generator_lib.cpp  main.cpp
cpp-generator/docs/: project.md  spec.md
cpp-generator/experimental/: c_header_parser.cpp  c_header_parser.h  c_plugin_generator.cpp  c_plugin_generator.h  impl_header_parser.cpp  impl_header_parser.h  lidl_ast.h  lidl_compat.h  lidl_emit_common.cpp  lidl_emit_common.h  lidl_gen_cdylib.cpp  lidl_gen_cdylib.h  lidl_gen_client.cpp  lidl_gen_client.h  lidl_gen_provider.cpp  lidl_gen_provider.h  lidl_gen_ui.cpp  lidl_lexer.cpp  lidl_lexer.h  lidl_parser.cpp  lidl_parser.h  lidl_serializer.cpp  lidl_serializer.h  lidl_validator.cpp  lidl_validator.h
cpp-generator/legacy/: generator_lib.cpp  generator_lib.h  legacy_main.h  main.cpp
cpp/implementations/mock/: logos_mock.h  mock_registry.h  mock_store.cpp  mock_store.h  mock_transport.cpp  mock_transport.h
cpp/implementations/plain/: cbor_codec.cpp  cbor_codec.h  incoming_call_handler.h  io_context_pool.cpp  io_context_pool.h  json_codec.cpp  json_codec.h  json_mapping.cpp  json_mapping.h  plain_logos_object.cpp  plain_logos_object.h  plain_transport_connection.cpp  plain_transport_connection.h  plain_transport_host.cpp  plain_transport_host.h  qvariant_rpc_value.cpp  qvariant_rpc_value.h  rpc_connection.h  rpc_framing.cpp  rpc_framing.h  rpc_message.cpp  rpc_message.h  rpc_server.cpp  rpc_server.h  rpc_value.h  wire_codec.h
cpp/implementations/qt_local/: local_transport.cpp  local_transport.h
cpp/implementations/qt_remote/: qt_remote_registry.cpp  qt_remote_registry.h  remote_logos_object.h  remote_transport.cpp  remote_transport.h
cpp/native/: logos_macros.h  logos_native_adapter.cpp  logos_native_adapter.h  logos_native_api.cpp  logos_native_api.h  logos_native_client.cpp  logos_native_client.h  logos_native_provider.cpp  logos_native_provider.h  logos_native_types.h  logos_value.cpp  logos_value.h  logos_value_qt.cpp  logos_value_qt.h
docs/: docs.md
doctests/: cpp-sdk-concurrent-dispatch.test.yaml  cpp-sdk-generator-roundtrip.test.yaml  cpp-sdk-module-composition.test.yaml  cpp-sdk-module-runtime.test.yaml  cpp-sdk-worker-thread-http.test.yaml  run.sh
main/: index.html
native-generator/: CMakeLists.txt  main.cpp
nix/: bin.nix  default.nix  include.nix  lib.nix  tests.nix
pr-102/: index.html
pr-103/: index.html
pr-104/: index.html
pr-105/: index.html
pr-106/: index.html
pr-107/: index.html
pr-108/: index.html
pr-109/: index.html
pr-73/: index.html
pr-75/: index.html
pr-77/: index.html
pr-78/: index.html
pr-79/: index.html
pr-80/: index.html
pr-81/: index.html
pr-82/: index.html
pr-83/: index.html
pr-84/: index.html
pr-85/: index.html
pr-86/: index.html
pr-87/: index.html
pr-88/: index.html
pr-89/: index.html
pr-90/: index.html
pr-91/: index.html
pr-92/: index.html
pr-93/: index.html
pr-94/: index.html
pr-95/: index.html
pr-97/: index.html
pr-98/: index.html
src/: CMakeLists.txt  compile.sh  logos_api.cpp
src/client/: logos_api_client.cpp  logos_api_client.h  logos_api_consumer.cpp  logos_api_consumer.h
src/core/: interface.h
src/logos-cpp-sdk/: example_usage.cpp  logos_api.cpp  logos_api_client.cpp  logos_api_client.h  simple_example.cpp
src/logos-cpp-sdk/client/: logos_api_client.cpp  logos_api_client.h
src/logos-cpp-sdk/provider/: module_proxy.cpp
src/logos-transport/: logos_api_consumer.cpp  logos_api_consumer.h  logos_api_provider.cpp  logos_api_provider.h  plugin_registry.h
src/provider/: logos_api_provider.cpp  logos_api_provider.h  module_proxy.cpp
src/provider/core/: interface.h
tests/: CMakeLists.txt
tests/experimental/: CMakeLists.txt  test_impl_header_parser.cpp  test_lidl_gen_cdylib.cpp  test_lidl_gen_client.cpp  test_lidl_gen_provider.cpp  test_lidl_lexer.cpp  test_lidl_parser.cpp  test_lidl_serializer.cpp  test_lidl_type_mapping.cpp  test_lidl_validator.cpp
tests/experimental/fixtures/: complex_impl.h  documented_events_impl.h  documented_events_metadata.json  empty_class_impl.h  empty_metadata.json  same_line_events_impl.h  same_line_events_metadata.json  sample_impl.h  sample_metadata.json  universal_impl.h  universal_metadata.json
tests/generator/: CMakeLists.txt  test_make_header.cpp  test_make_source.cpp  test_map_param_type.cpp  test_map_return_type.cpp  test_normalize_type.cpp  test_parse_provider_header.cpp  test_to_pascal_case.cpp  test_to_qvariant_conversion.cpp
tests/sdk/: CMakeLists.txt  test_async_calls.cpp  test_cbor_codec.cpp  test_event_system.cpp  test_json_codec.cpp  test_local_transport_integration.cpp  test_logos_instance.cpp  test_logos_json_bytes.cpp  test_logos_mode.cpp  test_logos_module_context.cpp  test_mock_store.cpp  test_mock_transport.cpp  test_module_proxy.cpp  test_peer_liveness_guard.cpp  test_plain_transport_tcp.cpp  test_plugin_registry.cpp  test_provider_dispatch.cpp  test_qml_sync_rpc_crash.cpp  test_registry_factory.cpp  test_rpc_framing.cpp  test_std_string_overloads.cpp  test_token_manager.cpp  test_transport_factory.cpp  test_worker_thread_ipc.cpp
(+52 files in other folders)
